--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>César's portfolio</title>
+    <title>Tropikas's portfolio</title>
 </head>
 <body>
 
-    <h1>César's portfolio</h1>
+    <h1>Tropikas's portfolio</h1>
 
     <h2>Web Developer</h2>
 
